[project]
name = "readerllamaindex"
version = "0.1.2"
description = "RAG读取与构建index知识库"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llama-index>=0.12.30",
    "llama-index-vector-stores-pinecone>=0.4.5",
    "llama-index-vector-stores-postgres>=0.4.2",
    "pinecone>=6.0.2",
    "python-dotenv>=1.1.0",
    "toolsz>=0.1.2",
]
